crates/musa-render/tests/suite/snapshots/suite__mei__repeats.snap
---
source: crates/musa-render/tests/mei.rs
expression: mei_of(source)
---
<?xml version="1.0" encoding="UTF-8"?>
<mei xmlns="http://www.music-encoding.org/ns/mei" meiversion="5.0">
  <meiHead>
    <fileDesc>
      <titleStmt>
        <title>Two Ways Home</title>
      </titleStmt>
      <pubStmt/>
    </fileDesc>
  </meiHead>
  <music>
    <body>
      <mdiv>
        <score>
          <scoreDef meter.count="4" meter.unit="4" key.sig="1s" key.mode="major">
            <pgHead>
              <rend halign="center" valign="top">
                <rend xml:id="front-title" fontsize="x-large">Two Ways Home</rend>
              </rend>
            </pgHead>
            <pgHead2>
              <rend halign="center" valign="top" fontsize="small">– <num label="page">#</num> –</rend>
            </pgHead2>
            <staffGrp>
              <staffDef n="1" lines="5" clef.shape="G" clef.line="2">
                <label>flute</label>
                <labelAbbr>flu.</labelAbbr>
              </staffDef>
              <staffDef n="2" lines="5" clef.shape="F" clef.line="4">
                <label>cello</label>
                <labelAbbr>cel.</labelAbbr>
              </staffDef>
            </staffGrp>
          </scoreDef>
          <section>
            <measure n="1" left="rptstart">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <note xml:id="event-0" dur="4" oct="5" pname="d"/>
                  <note xml:id="event-1" dur="4" oct="5" pname="g"/>
                  <note xml:id="event-2" dur="4" oct="5" pname="f" accid="s"/>
                  <note xml:id="event-3" dur="4" oct="5" pname="g"/>
                </layer>
              </staff>
              <staff n="2">
                <layer xml:id="layer-2-1" n="1">
                  <note xml:id="event-f" dur="2" oct="2" pname="g"/>
                  <note xml:id="event-10" dur="2" oct="2" pname="b"/>
                </layer>
              </staff>
              <tempo staff="1" tstamp="1" place="above" mm="108" mm.unit="4" midi.bpm="108"/>
            </measure>
            <measure n="2">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <note xml:id="event-4" dur="2" oct="5" pname="a"/>
                  <note xml:id="event-5" dur="2" oct="5" pname="b"/>
                </layer>
              </staff>
              <staff n="2">
                <layer xml:id="layer-2-1" n="1">
                  <note xml:id="event-11" dur="2" oct="3" pname="d"/>
                  <note xml:id="event-12" dur="2" oct="2" pname="g"/>
                </layer>
              </staff>
            </measure>
            <ending n="1" label="1">
              <measure n="3" right="rptend">
                <staff n="1">
                  <layer xml:id="layer-1-1" n="1">
                    <note xml:id="event-6" dur="2" oct="5" pname="a"/>
                    <note xml:id="event-7" dur="2" oct="5" pname="d"/>
                  </layer>
                </staff>
                <staff n="2">
                  <layer xml:id="layer-2-1" n="1">
                    <note xml:id="event-13" dur="2" oct="3" pname="c"/>
                    <note xml:id="event-14" dur="2" oct="2" pname="a"/>
                  </layer>
                </staff>
              </measure>
            </ending>
            <ending n="2" label="2">
              <measure n="4" right="end">
                <staff n="1">
                  <layer xml:id="layer-1-1" n="1">
                    <note xml:id="event-e" dur="1" oct="5" pname="g"/>
                  </layer>
                </staff>
                <staff n="2">
                  <layer xml:id="layer-2-1" n="1">
                    <note xml:id="event-19" dur="1" oct="2" pname="g"/>
                  </layer>
                </staff>
              </measure>
            </ending>
          </section>
        </score>
      </mdiv>
    </body>
  </music>
</mei>
